Add Twilio SMS notification integration
- Install twilio npm package
- Add Twilio credentials to .env.local and .env.local.example
- Create Twilio client helper (/lib/twilio/client.ts)
- Add notifications API route (/api/notifications/send)
- Create notification helper functions for common scenarios
- Update database schema with notifications and notification_preferences tables
- Add phone_number field to users table
- Create Twilio setup documentation
- Update README with new features

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^11.15.0",
     "next": "^15.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "twilio": "^5.11.1"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.15.2",
