--- a/.env.local.example
+++ b/.env.local.example
@@ -7,3 +7,9 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
 # Optional: For server-side operations that need elevated privileges
 # SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# Twilio Configuration
+# Get these from https://console.twilio.com
+TWILIO_ACCOUNT_SID=your_account_sid_here
+TWILIO_AUTH_TOKEN=your_auth_token_here
+TWILIO_PHONE_NUMBER=+1234567890
